tests/functionalTests/valid/code/printMinus1.hs
main :: IO ();
main = putInt -1;