tests/functionalTests/invalid/code/intTooSmall.hs
main :: IO ();
main = putInt -2147483649;